# ModernAppBackendTemplate

./: .env.test  .gitignore  AGENTS.md  changelog.md  copier.yaml  copier.yml  copier_approach.md  findings.md  pyproject.toml  regen.sh
.claude/agents/: code-reviewer.md  code-writer.md  plan-reviewer.md  plan-writer.md
.llmbox/: docker-compose.yml
docs/: change_workflow.md  copier_approach.md  downstream_sync_process.md  ei_copier_refactoring.md  migration-guide.md  remaining.md  zigbee-control-migration.md
docs/features/container_refactor/: change_brief.md  execution_report.md
plan/: container_refactor.md  decisions.md  electronics_inventory_migration_plan.md  metrics_redesign_plan.md  migration_approach.md  migration_issues.md
template/: .env.example.jinja  Dockerfile.jinja  Jenkinsfile.jinja  alembic.ini.jinja  pyproject.toml.jinja  run.py.jinja
template/.llmbox/: docker-compose.yml.jinja
template/alembic/: env.py  env.py.jinja  script.py.mako.jinja
template/app/: __init__.py.jinja  app_config.py  cli.py.jinja  config.py.jinja  consts.py.jinja  container.py.jinja  database.py  exceptions.py  startup.py  startup.py.jinja
template/app/api/: __init__.py.jinja  health.py.jinja  metrics.py  sse.py  sse.py.jinja  testing.py.jinja  testing_content.py  testing_sse.py
template/app/models/: __init__.py.jinja
template/app/schemas/: task_schema.py  testing.py  testing_sse.py  upload_document.py
template/app/services/: __init__.py  base_task.py  base_task.py.jinja  cas_image_service.py  connection_manager.py  container.py.jinja  metrics_service.py  testing_service.py  testing_service.py.jinja  version_service.py
template/app/utils/: __init__.py  cas_url.py  flask_error_handlers.py.jinja  lifecycle_coordinator.py  reset_lock.py  spectree_config.py.jinja  sse_utils.py  temp_file_manager.py
template/common/: __init__.py.jinja
template/common/auth/: __init__.py  decorators.py  oidc.py  routes.py
template/common/core/: app.py.jinja  container.py.jinja  errors.py.jinja  settings.py.jinja  spectree.py
template/common/database/: __init__.py
template/common/health/: routes.py.jinja
template/common/metrics/: __init__.py  routes.py  service.py
template/common/sse/: connection_manager.py  routes.py  (+1 more)
template/scripts/: args.sh.jinja  copier-update.sh  dev-sse-gateway.sh.jinja
template/tests/: conftest.py  conftest.py.jinja  conftest_infrastructure.py.jinja  test_health.py
test-app/: .copier-answers.yml  .env.example  .gitignore  Dockerfile  Jenkinsfile  alembic.ini  pyproject.toml  run.py
test-app-domain/app/: app_config.py  consts.py  startup.py
test-app-domain/tests/: conftest.py  test_items.py
test-app/.llmbox/: docker-compose.yml
test-app/alembic/: env.py  script.py.mako
test-app/alembic/versions/: 001_create_items.py
test-app/app/: __init__.py  app.py  cli.py  config.py  container.py  database.py  exceptions.py  extensions.py  startup.py
test-app/app/api/: __init__.py  auth.py  cas.py  health.py  items.py  oidc_hooks.py  testing.py  testing_sse.py
test-app/app/models/: __init__.py  item.py
test-app/app/schemas/: item_schema.py  testing_content.py
test-app/app/services/: base_task.py  container.py  diagnostics_service.py  image_service.py  item_service.py  s3_service.py  task_service.py  testing_service.py
test-app/app/utils/: empty_string_normalization.py  flask_error_handlers.py  image_processing.py  mime_handling.py  pool_diagnostics.py  request_parsing.py  spectree_config.py
test-app/common/auth/: __init__.py  oidc.py  oidc_client.py  routes.py
test-app/common/core/: app.py  container.py  errors.py  flask_app.py  runner.py  settings.py  shutdown.py
test-app/common/database/: extensions.py  health.py
test-app/common/health/: __init__.py  routes.py
test-app/common/metrics/: __init__.py  coordinator.py  service.py
test-app/common/sse/: __init__.py  connection_manager.py  null_broadcaster.py
test-app/common/tasks/: __init__.py  schemas.py  service.py
test-app/scripts/: args.sh  copier-update.sh  dev-sse-gateway.sh
test-app/tests/: conftest.py  conftest_infrastructure.py  test_items.py
tests/: __init__.py  conftest.py  test_app_factory.py  test_auth_routes.py  test_base_task.py  test_cas_image_service.py  test_cli.py  test_config.py  test_connection_manager.py  test_correlation_id.py  test_error_handling.py  test_errors.py  test_health.py  test_health_api.py  test_lifecycle.py  test_lifecycle_coordinator.py  test_metrics.py  test_metrics_api.py  test_metrics_service.py  test_oidc.py  test_s3.py  test_s3_service.py  test_shutdown.py  test_sse_api.py  test_sse_callback.py  test_sse_connection_manager.py  test_task_api.py  test_task_schemas.py  test_task_service.py  test_tasks.py  test_temp_file_manager.py  test_transaction_rollback.py  testing_utils.py
tests/api/: test_auth_endpoints.py  test_auth_middleware.py  test_testing_content.py
tests/integration/: sse_client_helper.py  sse_gateway_helper.py  test_sse_gateway_tasks.py  test_sse_gateway_version.py  test_task_stream_baseline.py  test_version_stream_baseline.py
tests/services/: test_auth_service.py  test_diagnostics_service.py  test_oidc_client_service.py
tests/test_tasks/: test_task.py
tests/utils/: test_auth_utils.py
(+10 files in other folders)
