[tool.poetry]
name = "test-app"
version = "0.1.0"
description = "Test application"
authors = ["Test Author <test@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.scripts]
cli = "app.cli:main"
dev = "run:main"
check = "scripts.check:main"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
spectree = "^1.2.0"
flask-cors = "^4.0.0"
waitress = "^3.0.0"
paste = "^3.10.1"
dependency-injector = "^4.48.1"
requests = "^2.31.0"
prometheus-flask-exporter = "^0.23.0"
python-dotenv = "^1.0.0"
flask-sqlalchemy = "^3.1.0"
alembic = "^1.13.0"
psycopg = {extras = ["binary"], version = "^3.1.0"}
pyjwt = "^2.11.0"
cryptography = "^46.0.4"
httpx = "^0.28.1"
boto3 = "^1.34.0"
pillow = "^10.2.0"
python-magic = "^0.4.27"

[tool.poetry.group.dev.dependencies]
copier = "^9.0.0"
ruff = "^0.11.0"
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
types-flask = "^1.1.0"
types-flask-cors = "^4.0.0"
types-requests = "^2.31.0"
types-waitress = "^3.0.1.20250801"
vulture = "^2.14"
types-pillow = "^10.2.0"
boto3-stubs = {extras = ["s3"], version = "^1.40.25"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = ["vulture_whitelist.py"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ERA",   # eradicate (commented-out code)
    "RUF100", # unused noqa directives
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"alembic/**" = ["E402"]
"tools/**" = ["ERA001"]

[tool.mypy]
python_version = "3.13"
plugins = ["sqlalchemy.ext.mypy.plugin"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = "vulture_whitelist"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "app.models.*"
disable_error_code = ["attr-defined"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
markers = [
    "integration: marks tests as integration tests (requires external dependencies)",
    "slow: marks tests as slow running tests"
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore::pluggy._warnings.PluggyTeardownRaisedWarning",
    "ignore::DeprecationWarning:pydantic.*"
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]
